fix: Quoted text alignment for reply outgoing message(#635)
Setup alignment for quoted message
Also remove padding to make it look nicer

Fixes: https://sendbird.atlassian.net/browse/UIKIT-4130

--- a/src/ui/QuoteMessage/index.scss
+++ b/src/ui/QuoteMessage/index.scss
@@ -160,3 +160,16 @@
 .sendbird-quote-message.unavailable:hover {
   cursor: default;
 }
+
+.sendbird-message-content.outgoing {
+  .sendbird-quote-message__replied-to {
+    flex-direction: row-reverse;
+    padding-right: 0px;
+  }
+}
+
+.sendbird-message-content.incoming {
+  .sendbird-quote-message__replied-to {
+    padding-left: 0px;
+  }
+}
